# ddns

./: CHANGELOG.md  LICENSE  ddns.cabal  default.nix  shell.nix
src/: Main.hs
