cabal-version:       2.4
name:                ddns
version:             0.0.1
description:         A simple dynamic dns client
homepage:            https://github.com/winpat/ddns
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Winter
maintainer:          patrickwinter@posteo.ch
category:            Network
extra-source-files:  CHANGELOG.md

executable ddns
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , wreq ^>=0.5.3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
