cabal-version:       2.4
name:                ddns
version:             0.0.1
description:         A simple dynamic dns client
homepage:            https://github.com/winpat/ddns
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Winter
maintainer:          patrickwinter@posteo.ch
category:            Network
extra-source-files:  CHANGELOG.md

executable ddns
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , wreq ^>=0.5.3.2
                     , lens ^>=4.18
                     , bytestring ^>=0.10.8.2
                     , utf8-string ^>=1.0.1.1
                     , lens ^>=4.18
                     , lens-aeson ^>=1.1
                     , text ^>=1.2.3.1
                     , aeson ^>=1.4.4.0
                     , unordered-containers ^>=0.2.10.0
  hs-source-dirs:      src
  default-language:    Haskell2010
